fixed some spacing

--- a/website/static/styles.css
+++ b/website/static/styles.css
@@ -1035,7 +1035,7 @@ Creating the Contact page design
 .content-section-contact-page {
     height: 80vh;
     width: 100%;
-    padding: 0 0 18vh 0;
+    padding: 0 0 22vh 0;
     display: flex;
     flex-direction: row;
 }
@@ -1092,6 +1092,7 @@ Creating the Contact page design
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    padding: 0 0 0 10%;
     
     
 }
